# memo

./: .gitattributes  .gitignore  Cargo.toml  README.md  RELEASING.private.md  config.example.toml  install.ps1  install.sh
.claude/: CLAUDE.md
.github/workflows/: publish.yml  release.yml
.release-notes/: v0.1.0-rc2.md
src/: app.rs  audio.rs  config.rs  dictation.rs  llm.rs  main.rs  note.rs  search.rs  server.rs  setup.rs  storage.rs  testutil.rs  theme.rs  update.rs
src/ui/: drawer.rs  editor.rs  list.rs  mod.rs  modal.rs
